@@ -1,3 +1,5 @@
+          : Added rx and tx fields to `process.memory()` which allows user code to check how full the rx and tx buffers are
+
      2v29 : Array.sort: fix issue where *some* sorts of 10+ items could cause the array not to be GC'd
             Bangle.js: Updated built-in Layout.js with some minor fixes
             STM32: Ensure setDeepSleep(1) will only sleep if there are no active PWM outputs
